--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-Flask
-Flask-SQLAlchemy
-Flask-Login
-Flask-WTF
-SQLAlchemy
-WTForms
-email_validator
-gunicorn
-python-dotenv
+Flask==2.3.3
+Flask-SQLAlchemy==3.1.1
+Flask-Login==0.6.2
+Flask-WTF==1.2.1
+SQLAlchemy==2.0.23
+WTForms==3.0.1
+email_validator==2.1.0
+python-dotenv==1.0.0
+gunicorn==21.2.0
